--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,6 +5,10 @@ $light-text-bg: #444a57;
 $light-text-light: #524d4d;
 $light-text-dark: #1b0703;
 $light-shadow: rgba(149 157 165 / 20%);
+$light-red: #bd4b4b;
+$light-blue: #28619e;
+$light-blue-hover: #205295;
+$light-blue-active: #194782;
 
 $dark-background: #1a1c22;
 $dark-foreground: #22252d;
