--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,3 +3,10 @@
 @import "abstracts/animations";
 
 @import "global/base";
+@import "global/utils";
+
+@import "components/container";
+@import "components/form";
+@import "components/input";
+@import "components/button";
+@import "components/loader";
